добавлены эндпоинты для пользователей
